Archive2/ba/a47ad57669efc7/output
main.cpp:83:23: error: 'enable_if' in namespace 'std' does not name a type
         typename std::enable_if<traits::supports_console_ctx<ClientObject>::value>::type>
                       ^
main.cpp:83:32: error: expected template-argument before '<' token
         typename std::enable_if<traits::supports_console_ctx<ClientObject>::value>::type>
                                ^
main.cpp:83:32: error: expected '>' before '<' token
main.cpp:83:89: error: template argument 3 is invalid
         typename std::enable_if<traits::supports_console_ctx<ClientObject>::value>::type>
                                                                                         ^
main.cpp:84:5: error: expected '::' before '{' token
     {
     ^
main.cpp:84:5: error: expected identifier before '{' token
main.cpp:84:5: error: qualified name does not name a class before '{' token
